--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
+    "@types/react-window-infinite-loader": "^1.0.6",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-beautiful-dnd": "^13.1.0",
+    "react-content-loader": "^6.2.0",
+    "react-dom": "^18.0.0",
+    "react-table": "^7.7.0",
+    "react-table-sticky": "^1.1.3",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.7",
+    "react-window-infinite-loader": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
