--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/react-window": "^1.8.5",
-    "@types/react-window-infinite-loader": "^1.0.6",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-content-loader": "^6.2.0",
@@ -23,7 +20,12 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.0",
+    "@types/react-table": "^7.7.12",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
+    "@types/react-window-infinite-loader": "^1.0.6",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
