--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-content-loader": "^6.2.0",
