--- a/package.json
+++ b/package.json
@@ -1,35 +1,50 @@
 {
-  "name": "virtualized-table",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "clsx": "^1.1.1",
-    "react": "^18.0.0",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-content-loader": "^6.2.0",
-    "react-dom": "^18.0.0",
-    "react-table": "^7.7.0",
-    "react-table-sticky": "^1.1.3",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.7",
-    "react-window-infinite-loader": "^1.0.7",
-    "sass": "^1.51.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-table": "^7.7.12",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/react-window": "^1.8.5",
-    "@types/react-window-infinite-loader": "^1.0.6",
-    "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5"
-  }
+    "name": "virtualized-table",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix",
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "echo \"Hello!\""
+        }
+    },
+    "dependencies": {
+        "clsx": "^1.1.1",
+        "react": "^18.0.0",
+        "react-beautiful-dnd": "^13.1.0",
+        "react-content-loader": "^6.2.0",
+        "react-dom": "^18.0.0",
+        "react-table": "^7.7.0",
+        "react-table-sticky": "^1.1.3",
+        "react-virtualized-auto-sizer": "^1.0.6",
+        "react-window": "^1.8.7",
+        "react-window-infinite-loader": "^1.0.7",
+        "sass": "^1.51.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.0",
+        "@types/react-beautiful-dnd": "^13.1.2",
+        "@types/react-dom": "^18.0.0",
+        "@types/react-table": "^7.7.12",
+        "@types/react-virtualized-auto-sizer": "^1.0.1",
+        "@types/react-window": "^1.8.5",
+        "@types/react-window-infinite-loader": "^1.0.6",
+        "@typescript-eslint/eslint-plugin": "^5.25.0",
+        "@typescript-eslint/parser": "^5.25.0",
+        "@vitejs/plugin-react": "^1.3.0",
+        "eslint": "^8.16.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.30.0",
+        "prettier": "^2.6.2",
+        "typescript": "^4.6.3",
+        "vite": "^2.9.5"
+    }
 }
