--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.30.0",
+        "husky": "^8.0.1",
         "prettier": "^2.6.2",
         "typescript": "^4.6.3",
         "vite": "^2.9.5"
