--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
         "preview": "vite preview",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
-        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "echo \"Hello!\""
-        }
+        "format": "prettier --write . --config ./.prettierrc",
+        "prepare": "husky install"
     },
     "dependencies": {
         "clsx": "^1.1.1",
+        "husky": "^8.0.1",
         "react": "^18.0.0",
         "react-beautiful-dnd": "^13.1.0",
         "react-content-loader": "^6.2.0",
@@ -43,7 +40,6 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.30.0",
-        "husky": "^8.0.1",
         "prettier": "^2.6.2",
         "typescript": "^4.6.3",
         "vite": "^2.9.5"
